fix last dark mode artifacts

--- a/public/globals.css
+++ b/public/globals.css
@@ -22,3 +22,8 @@ a {
 html[data-theme='dark'], html[data-theme='dark'] body, html[data-theme='dark'] .mantine-Paper-root {
   background-color: #1A1B1E;
 }
+
+
+html[data-theme='dark'] .mantine-Chip-label{
+  background-color: #373A40;
+}
